# cli_benches

./: README.md  pyproject.toml  startup_time.py
cli_benches/: argparse_cli.py  click_cli.py  docopt_cli.py  fire_cli.py  model.py  typer_cli.py
