[project]
name = "cli-benches"
version = "0.1.0"
description = "Some benchamrk of CLI startup time"
authors = [
  {name = "Mihhail Samusev", email = "mhs@bluepp.dk" }
]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pandas==2.1.*",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "coverage",
    "tox",
    "tox-conda",
    "mypy",
    "gitpython",
    "pytest-xdist"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]
