[project]
name = "cli-benches"
version = "0.1.0"
description = "Some benchamrk of CLI startup time"
authors = [
  {name = "Mihhail Samusev", email = "mhs@bluepp.dk" }
]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "click",
    "typer",
    "fire",
    "docopt"
]


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "coverage",
    "tox",
    "tox-conda",
    "mypy",
    "gitpython",
    "pytest-xdist"
]

[project.scripts]
argparse-cli = "cli_benches.argparse_cli:cli"
typer-cli = "cli_benches.typer_cli:cli"
click-cli = "cli_benches.click_cli:cli"
fire-cli = "cli_benches.fire_cli:cli"
docopt-cli = "cli_benches.docopt_cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]
